[UPD] primi blocchi colorati mobile

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="top">
+
+                </div>
+                <div class="center">
+
+                </div>
+                <div class="foot">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
