[UPD] primi blocchi colorati tablet

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <div class="container">
         <div class="row">
+            <div class="col tablet-only">
+                <div class="top">
+                    
+                </div>
+            </div>
             <div class="col">
                 <div class="top">
 
@@ -17,7 +22,7 @@
 
                 </div>
                 <div class="foot">
-                    
+
                 </div>
             </div>
         </div>
