[UPD] 2 colori background body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col tablet-only">
                 <div class="top">
-                    
+
                 </div>
             </div>
             <div class="col">
@@ -27,5 +27,6 @@
             </div>
         </div>
     </div>
+<!-- <img src="./img/screenshots/desktop.png" alt=""> -->
 </body>
 </html>
