--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -16,13 +19,19 @@
             </div>
             <div class="col">
                 <div class="top">
-
+                    <div class="top-img">
+                        <img src="./img/avatar_2.jpg" alt="">
+                    </div>
+                    <div class="top-nome">
+                        <h2>Alessandro</h2>
+                        <p class="grey">Ultimo accesso oggi alle 23:59</p>
+                    </div>
                 </div>
                 <div class="center">
 
                 </div>
                 <div class="foot">
-
+                    <input id="msg" type="text" placeholder="    Scrivi un messaggio">                
                 </div>
             </div>
         </div>
