--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@
         <div class="row">
             <div class="col tablet-only">
                 <div class="top">
-
-                </div>
-            </div>
-            <div class="col">
-                <div class="top">
                     <div class="top-img">
                         <img src="./img/avatar_2.jpg" alt="">
                     </div>
+                </div>
+                <div class="notification">
+
+                </div>
+                <div class="cerca">
+
+                </div>
+                
+            </div>
+            <div class="col content">
+                <div class="top">
+                    <div class="top-img">
+                        <img src="./img/avatar_1.jpg" alt="">
+                    </div>
                     <div class="top-nome">
-                        <h2>Alessandro</h2>
+                        <span>Asdrubale</span>
                         <p class="grey">Ultimo accesso oggi alle 23:59</p>
                     </div>
                 </div>
@@ -31,7 +40,7 @@
 
                 </div>
                 <div class="foot">
-                    <input id="msg" type="text" placeholder="    Scrivi un messaggio">                
+                    <input id="msg" type="text" placeholder="Scrivi un messaggio">                
                 </div>
             </div>
         </div>
