[FIX] sostituita altezza colonna di sisnistra con flex

--- a/index.html
+++ b/index.html
@@ -52,10 +52,309 @@
                                 <div class="top-img flex">
                                     <img src="./img/avatar_1.jpg" alt="">
                                 </div>
-                                <div class="info-chat">
+                                <div class="info-chat desktop-only">
                                     <div>
                                         <span>
-                                            Michele
+                                            Asdrubale
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_3.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Samuele
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_4.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro B.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_5.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro L.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_6.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Claudia
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_7.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Federico
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_8.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Davide
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_1.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Asdrubale
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_3.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Samuele
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_4.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro B.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_5.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro L.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_6.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Claudia
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_7.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Federico
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_8.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Davide
                                         </span>
                                         <p>
                                             Lorem ipsum dolor sit amet
