--- a/index.html
+++ b/index.html
@@ -400,7 +400,138 @@
                     </div>
                 </div>
                 <div class="center">
-
+                    <div class="messaggi">
+                        <div class="inviato fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ricevuto fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="inviato fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ricevuto fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="inviato fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ricevuto fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="inviato fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ricevuto fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="inviato fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ricevuto fumetto">
+                            <div class="testo">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui itaque atque sequi, minima dicta dolorem voluptatibus praesentium deleniti asperiores nihil necessitatibus porro assumenda quam reiciendis in quidem! Ullam, earum labore.
+                            </div>
+                            <div class="info-messaggio">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                                </div>
+                                <div class="ora">
+                                    <span>16.13</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="foot">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm177.6 62.1C192.8 334.5 218.8 352 256 352s63.2-17.5 78.4-33.9c9-9.7 24.2-10.4 33.9-1.4s10.4 24.2 1.4 33.9c-22 23.8-60 49.4-113.6 49.4s-91.7-25.5-113.6-49.4c-9-9.7-8.4-24.9 1.4-33.9s24.9-8.4 33.9 1.4zM144.4 208a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm192-32a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg>
