[FIX] cerchi delle immagini e scrollbar ase x sulla colonna delle chat

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Boolzapp</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
+            <!-- COLONNA DI SINISTRA CON ELENCO DELLE CHAT -->
             <div class="col tablet-only">
                 <div class="top">
                     <div class="top-img">
@@ -29,6 +30,7 @@
                         </ul>
                     </div>
                 </div>
+                <!-- SEZIONE VISIBILE SOLO IN MODALITà DESKTOP NELLA COLONNA DELLE CHAT -->
                 <div class="notification desktop-only">
                     <div class="notification-center">
                         <div class="notification-svg">
@@ -46,6 +48,7 @@
                         <input type="text" placeholder="Cerca o inizia una nuova chat">                    </div>
                 </div>
                 <div class="chats">
+                    <!-- LISTA LUNGHISSIMA DELLE CHAT -->
                     <ul>
                         <li>
                             <div class="chats-content">
@@ -369,10 +372,330 @@
                             </div>
                             <hr>
                         </li>
-                        
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_1.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Asdrubale
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_3.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Samuele
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_4.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro B.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_5.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro L.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_6.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Claudia
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_7.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Federico
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_8.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Davide
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_1.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Asdrubale
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_3.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Samuele
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_4.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro B.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_5.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Alessandro L.
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_6.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Claudia
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_7.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Federico
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
+                        <li>
+                            <div class="chats-content">
+                                <div class="top-img flex">
+                                    <img src="./img/avatar_8.jpg" alt="">
+                                </div>
+                                <div class="info-chat desktop-only">
+                                    <div>
+                                        <span>
+                                            Davide
+                                        </span>
+                                        <p>
+                                            Lorem ipsum dolor sit amet
+                                        </p>
+                                    </div>
+                                    <div class="ora">
+                                        <span>
+                                            16:15
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </li>
                     </ul>
                 </div>
-
             </div>
             <div class="col content">
                 <div class="top">
@@ -400,6 +723,7 @@
                     </div>
                 </div>
                 <div class="center">
+                    <!-- MESSAGGI FITTIZZI PER TESTARE LA SCROLLBAR -->
                     <div class="messaggi">
                         <div class="inviato fumetto">
                             <div class="testo">
@@ -541,6 +865,5 @@
             </div>
         </div>
     </div>
-<!-- <img src="./img/screenshots/desktop.png" alt=""> -->
 </body>
 </html>
